cluster/apps/keycloak/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloakwp
          image: keycloak/keycloak:25.0.2
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            runAsUser: 9999
          args:
            - "start"
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
