cluster/apps/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "auth.spuxx.dev"
      secretName: spuxx.dev
  rules:
    - host: auth.spuxx.dev
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: non-existant-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
